# tpt-synapse

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.studio  README.md  SPEC.md  TODO 1260705.md  TODO.md  go.mod  spec.txt
.githooks/: pre-push
adapters/amqp/: Cargo.toml  README.md
adapters/amqp/fuzz/: Cargo.toml
adapters/amqp/fuzz/fuzz_targets/: parse.rs
adapters/amqp/src/: broker.rs  codec.rs  lib.rs  server.rs
adapters/amqp/tests/: integration.rs
adapters/kafka/: Cargo.toml  README.md
adapters/kafka/fuzz/: Cargo.toml
adapters/kafka/fuzz/fuzz_targets/: parse.rs
adapters/kafka/src/: broker.rs  codec.rs  lib.rs  server.rs
adapters/kafka/tests/: integration.rs
adapters/mqtt/: Cargo.toml  README.md
adapters/mqtt/fuzz/: Cargo.toml
adapters/mqtt/fuzz/fuzz_targets/: parse.rs
adapters/mqtt/src/: broker.rs  codec.rs  lib.rs  server.rs
adapters/mqtt/tests/: integration.rs
adapters/native/: Cargo.toml  README.md
adapters/native/src/: lib.rs
adapters/resp/: Cargo.toml  README.md
adapters/resp/fuzz/: Cargo.toml
adapters/resp/fuzz/fuzz_targets/: parse.rs
adapters/resp/src/: broker.rs  codec.rs  lib.rs  server.rs
adapters/resp/tests/: integration.rs
broker/: Cargo.toml  README.md
broker/src/: main.rs
charts/tpt-synapse/: Chart.yaml  values.yaml
charts/tpt-synapse/templates/: NOTES.txt  broker-deployment.yaml  broker-service.yaml  studio-deployment.yaml  studio-service.yaml
cmd/synapsectl/: main.go
conformance/: COMPATIBILITY.md  README.md
conformance/harness/: Cargo.toml  LICENSE-MIT
conformance/harness/src/: lib.rs
controlplane/: controlplane.go  controlplane_test.go
core/: Cargo.toml  README.md
core/benches/: routing_bench.rs
core/src/: admin.rs  cluster.rs  consensus.rs  engine.rs  error.rs  http.rs  io_uring.rs  lib.rs  log.rs  map.rs  metrics.rs  queue.rs  storage.rs  tenant.rs  tls.rs  transport.rs
routing/: Cargo.toml  LICENSE-APACHE  README.md
routing/benches/: topic_bench.rs
routing/src/: backpressure.rs  graph.rs  lib.rs  rule.rs  stream.rs  topic.rs  wasm_transform.rs
scripts/: check_todo.sh  ci.ps1  ci.sh
synapse-native-client/: Cargo.toml  README.md
synapse-native-client/src/: lib.rs
synapse-studio/: Cargo.toml  README.md
synapse-studio/src/: main.rs
tpt-workflow/: Cargo.toml  build.rs
tpt-workflow/proto/: workflow.proto
tpt-workflow/src/: dispatch.rs  error.rs  lib.rs  metrics.rs  proto.rs  server.rs  service.rs
tpt-workflow/tests/: integration.rs
