[workspace]
resolver = "2"
members = [
    "core",
    "routing",
    "adapters/mqtt",
    "adapters/kafka",
    "adapters/amqp",
    "adapters/resp",
    "adapters/native",
    "synapse-native-client",
    "synapse-studio",
    "broker",
    "conformance/harness",
    "tpt-workflow",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/tpt-solutions/tpt-synapse"
homepage = "https://github.com/tpt-solutions/tpt-synapse"
authors = ["tpt-solutions"]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"] }
openraft = "0.9"
bytes = "1"

# Linux-only io_uring runtime, picked in Phase 0 per TODO.md so the storage
# engine's write path is designed against it from Phase 1 rather than retrofitted.
[workspace.dependencies.tokio-uring]
version = "0.5"

# cargo-release (https://github.com/crate-ci/cargo-release): all publishable
# crates share one version number per release, bumped and published together
# in the order cargo-release derives from the workspace dependency graph.
[workspace.metadata.release]
shared-version = true
consolidate-commits = true
tag-name = "v{{version}}"
