[package]
name = "tpt-synapse-broker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = true
description = "tpt-synapse unified broker — speaks MQTT, Kafka, AMQP, and Redis RESP over one shared storage core"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["broker", "mqtt", "kafka", "amqp", "redis"]
categories = ["network-programming", "asynchronous", "database"]
readme = "README.md"

[[bin]]
name = "synapse-broker"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
synapse-core = { path = "../core", version = "0.1.0", package = "tpt-synapse-core" }
synapse-adapter-mqtt = { path = "../adapters/mqtt", version = "0.1.0", package = "tpt-synapse-adapter-mqtt" }
synapse-adapter-kafka = { path = "../adapters/kafka", version = "0.1.0", package = "tpt-synapse-adapter-kafka" }
synapse-adapter-amqp = { path = "../adapters/amqp", version = "0.1.0", package = "tpt-synapse-adapter-amqp" }
synapse-adapter-resp = { path = "../adapters/resp", version = "0.1.0", package = "tpt-synapse-adapter-resp" }
synapse-adapter-native = { path = "../adapters/native", version = "0.1.0", package = "tpt-synapse-adapter-native" }
rand = "0.8"
base64 = "0.22"
