[package]
name = "synapse-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio = { workspace = true }
openraft = { workspace = true, optional = true }
bytes = { workspace = true }
prometheus = "0.13"

[dev-dependencies]
criterion = "0.5"
synapse-routing = { path = "../routing" }

[features]
default = []
# Linux io_uring network I/O backend (tokio-uring). Off by default so the
# crate builds everywhere; enable on Linux to serve the TCP accept path via
# io_uring.
io-uring = []
# Embedded Raft consensus (openraft) for multi-node HA + log replication.
consensus = ["dep:openraft"]

[[bench]]
name = "routing_bench"
harness = false

# tokio-uring wraps liburing, which only exists on Linux. Keeping the
# dependency target-gated lets `cargo build`/`cargo test` succeed on any
# workstation OS while the production I/O path stays io_uring-based on Linux.
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { workspace = true }
