[package]
name = "tpt-synapse-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = true
description = "Unified storage engine for tpt-synapse — Log, Queue, and Map primitives over a shared tiered append-only storage layer"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["broker", "storage", "message-queue", "mqtt", "kafka"]
categories = ["database", "network-programming", "asynchronous"]
readme = "README.md"

[lib]
name = "synapse_core"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
openraft = { workspace = true, optional = true }
bytes = { workspace = true }
prometheus = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
# TLS / mTLS termination for protocol adapters and the admin API.
rustls = { version = "0.22", default-features = false, features = ["ring"] }
tokio-rustls = "0.25"
rustls-pemfile = "2"

[dev-dependencies]
criterion = "0.5"

[features]
default = []
# Linux io_uring network I/O backend (tokio-uring). Off by default so the
# crate builds everywhere; enable on Linux to serve the TCP accept path via
# io_uring.
io-uring = []
# Embedded Raft consensus (openraft) for multi-node HA + log replication.
consensus = ["dep:openraft"]

[[bench]]
name = "routing_bench"
harness = false

# tokio-uring wraps liburing, which only exists on Linux. Keeping the
# dependency target-gated lets `cargo build`/`cargo test` succeed on any
# workstation OS while the production I/O path stays io_uring-based on Linux.
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { workspace = true }
