[package]
name = "synapse-routing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
synapse-core = { path = "../core" }
bytes = { workspace = true }
wasmtime = { version = "46", default-features = false, features = ["cranelift", "runtime", "wat"] }
