[package]
name = "synapse-native-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
synapse-adapter-native = { path = "../adapters/native" }
tokio = { workspace = true }
thiserror = "1"

[dev-dependencies]
synapse-core = { path = "../core" }
