[package]
name = "synapse-native-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = true
description = "Client SDK for the tpt-synapse native encrypted protocol"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["broker", "client", "mqtt", "kafka", "encryption"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[dependencies]
synapse-adapter-native = { path = "../adapters/native", version = "0.1.0" }
tokio = { workspace = true }
thiserror = "1"

[dev-dependencies]
synapse-core = { path = "../core", version = "0.1.0" }
