[package]
name = "tpt-workflow"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
synapse-core = { path = "../core", version = "0.1.0" }
tokio = { workspace = true }
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
prometheus = "0.13"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
synapse-core = { path = "../core", version = "0.1.0" }
tokio = { workspace = true }
tonic = "0.12"
prost = "0.13"
