[package]
name = "synapse-adapter-kafka"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
synapse-routing = { path = "../../routing" }
synapse-core = { path = "../../core" }
bytes = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
synapse-core = { path = "../../core" }
