[package]
name = "synapse-adapter-mqtt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = true
description = "MQTT v3.1.1/v5.0 wire protocol adapter for the tpt-synapse unified broker"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["mqtt", "broker", "iot", "protocol", "adapter"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[dependencies]
synapse-routing = { path = "../../routing", version = "0.1.0" }
synapse-core = { path = "../../core", version = "0.1.0" }
bytes = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
synapse-core = { path = "../../core", version = "0.1.0" }
