[package]
name = "synapse-adapter-native"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
aead = "0.5"
synapse-core = { path = "../../core" }
synapse-routing = { path = "../../routing" }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
crc32fast = "1"
thiserror = "1"

[dev-dependencies]
tokio = { workspace = true }
