[package]
name = "tpt-synapse-adapter-native"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = true
description = "Native encrypted protocol adapter for tpt-synapse — ChaCha20-Poly1305 AEAD framing with X25519 key exchange"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["broker", "protocol", "encryption", "chacha20", "x25519"]
categories = ["network-programming", "cryptography", "asynchronous"]
readme = "README.md"

[lib]
name = "synapse_adapter_native"

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
aead = "0.5"
synapse-core = { path = "../../core", version = "0.1.0", package = "tpt-synapse-core" }
synapse-routing = { path = "../../routing", version = "0.1.0", package = "tpt-synapse-routing" }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
crc32fast = "1"
thiserror = "1"

[dev-dependencies]
tokio = { workspace = true }
