[package]
name = "synapse-adapter-amqp-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
synapse-adapter-amqp = { path = "..", package = "tpt-synapse-adapter-amqp" }

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[workspace]
